@@ -24,6 +24,8 @@ debsig-verify (0.9) UNRELEASED; urgency=low
     - Use libdpkg error handling code.
     - Use libdpkg ar handling. This enables ar large file support (LFS).
   * Check return values from functions marked with warn_unused_result.
+  * Fix typos (aswell → as well). Closes: #748539
+    Thanks to Tomas Pospisek <tpo_deb@sourcepole.ch>.
 
  -- Guillem Jover <guillem@debian.org>  Sun, 11 May 2014 05:35:13 +0200
 
